# portfolio-dioxus

./: Cargo.toml  Dioxus.toml  dev.bat  mod.rs  preload_css.ps1
assets/: tailwind.css
assets/data/: facts.ts  portfolio.ts  slides.ts  timeline.ts
assets/snapshots/: plant-parent-a25d65d645d2956e.avif  tkinter-d4077b08a9ee6d82.avif
src/: main.rs
src/pages/: home.rs
src/sections/: gallery.rs  hero.rs  links.rs  mod.rs  navbar.rs  projects.rs  timeline.rs
util/: add_lang.ps1  add_splash_styling.ps1  build.ps1  dev.bat
