[package]
name = "port"
version = "0.1.0"
authors = ["remysedlak <remysedlak@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["web"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Performance", "PerformanceTiming"] }


[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
